# hex-sea-battle

./: .gitignore  CMakeLists.txt  Makefile  README.md  THANKS  app  funny_shader_point.glsl  hex-sea-battle  hex-sea-battle.exe!  list  unpack.py
client/: Makefile
client/shader/: fragment.glsl  funny_fragment_angle.glsl  vertex.glsl
client/src/: .net.cpp.swp  background.cpp  button.cpp  drawing.cpp  engine.cpp  field.cpp  ft.cpp  geom.cpp  init_world.cpp  main.cpp  music_player.cpp  net.cpp  ship.cpp  socket.cpp
client/src/include/: background.h  button.h  drawing.h  engine.h  field.h  ft.h  gl.h  init_world.h  math_3d.h  music_player.h  net.h  player.h  ship.h  socket.h  util.h
server/src/: background.cpp  battle.cpp  engine.cpp  field.cpp  ft.cpp  geom.cpp  init_world.cpp  main.cpp  net.cpp  polygon.cpp  ship.cpp  socket.c
server/src/include/: battle.h  button.h  drawing.h  engine.h  field.h  geom.h  gl.h  math_3d.h  polygon.h  ship.h
server/src/include/net/: net.h  socket.h
shader/: fragment.glsl  vertex.glsl
src/: background.cpp  button.cpp  draw_text.cpp  drawing.cpp  engine.cpp  field.cpp  ft.cpp  geom.cpp  gl.cpp  init_world.cpp  main.cpp  polygon.cpp  ship.cpp
src/include/: button.h  draw_text.h  drawing.h  engine.h  field.h  ft.h  geom.h  gl.h  init_world.h  math_3d.h  music_player.h  polygon.h  ship.h
